# AJAX_Hackathon_26

./: .gitignore  KINEMATICS_PLAN.md  README.md  pyproject.toml  sample_event_slice.py  test.ipynb  visualize_goal.py  xml_explorer.ipynb
data/: Hackathon Primer Team Rockstars IT Ajax.md  XML_anonymized.xml  data_analysis.ipynb  ideal_skeletons.pkl  ideal_skeletons_summary.csv  instances_parsed.csv  shot_detections.csv  shot_kinematics.pkl  shot_kinematics_summary.csv  shots_ball.parquet
plans/: phase1_trim_parquet.md  phase2_flatten_kinematics.md  phase2_shot_detection.md  phase5_ideal_skeletons.md
scripts/: export_ideal_skeletons.py  export_kinematics.py  export_shots.py
tests/: test_shot_detection_regressions.py
utils/: build_shot_parquet.py  compute_shot_kinematics.py  detect_shot_frames.py  event_data.py  generate_ideal_skeletons.py  kinematics.py  process_shot_windows.py  sample_event_slice.py  skeleton_data.py  test_kinematics.py
viz/: package-lock.json  package.json
viz/app/: globals.css  layout.tsx  page.tsx
viz/app/kinematics/: page.tsx
viz/components/: GazeOverlay.tsx  NavBar.tsx  Playback.tsx  PlayerSkeleton.tsx  ShotScene.tsx  types.ts
viz/components/kinematics/: CascadeChart.tsx  ComparePanel.tsx  IdealScoreCard.tsx  IdealSkeletonCompare.tsx  PitchMini.tsx  ShotStrip.tsx  SkeletonContact.tsx  WhipChainGauge.tsx  types.ts
