[project]
name = "ajax-hackathon-26"
version = "0.1.0"
description = "Football skeleton tracking data analysis for Ajax Hackathon 26"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=23.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pypdf>=4.0.0",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]